# fts-next-test-patient-uploader

./: Cargo.toml  README.md  run.sh
src/: consent.rs  docker.rs  main.rs  patient.rs
