[package]
name = "upload_test_patients"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version = "4.5.15", features = ["derive"] }
reqwest = "0.12.5"
serde = { version = "1.0.207" }
serde_json = "1.0.124"
tokio = { version = "1.39.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.2"
uuid = { version = "1.10.0", features = ["v4"] }
